...
                    containerColor = MaterialTheme.colorScheme.primary,
                    contentColor = MaterialTheme.colorScheme.onPrimary
                ),
                modifier = Modifier
                    .fillMaxWidth()
                    .height(40.dp)
                    .testTag("log_in__button")
            ) {
                Text(
                    text = stringResource(R.string.settings__guest__log_in_button),
                    fontSize = 16.sp,
                    fontWeight = FontWeight.Bold,
                    letterSpacing = 1.sp
...
            Button(
                onClick = {
                    authViewModel.logOut()
                },
                modifier = Modifier
                    .height(40.dp)
                    .testTag("log_out_button")
            ) {
                Text(
                    text = stringResource(R.string.settings__account__log_out_button),
                    fontSize = 16.sp,
                    fontWeight = FontWeight.Bold,
                    letterSpacing = 1.sp
...
            OutlinedTextField(
                value = stringResource(AppConstants.languages.getValue(selectedLanguage)),
                onValueChange = {},
                label = { Text(stringResource(R.string.settings__personalization__language__title)) },
                modifier = Modifier
                    .fillMaxWidth()
                    .testTag("language_input"),
                readOnly = true,
                trailingIcon = {
                    Icon(
                        imageVector = Icons.Default.ArrowDropDown,
                        contentDescription = null
                    )
...
            value = newEmail,
            onValueChange = { newEmail = it },
            label = { Text(stringResource(R.string.settings__change_email__new_email_input)) },
            keyboardOptions = KeyboardOptions(keyboardType = KeyboardType.Email),
            modifier = Modifier
                .fillMaxWidth()
                .testTag("change_email_form__email_input"),
            isError = newEmail.isNotBlank() &&
                    !Patterns.EMAIL_ADDRESS.matcher(newEmail).matches()
        )

        Spacer(modifier = Modifier.height(16.dp))

...
            onValueChange = { password = it },
            label = { Text(stringResource(R.string.settings__change_email__password_input)) },
            visualTransformation = PasswordVisualTransformation(),
            keyboardOptions = KeyboardOptions(keyboardType = KeyboardType.Password),
            modifier = Modifier
                .fillMaxWidth()
                .testTag("change_email_form__password_input")
        )

        Spacer(modifier = Modifier.height(20.dp))

        Button(
            onClick = {
...
                    locale = LocaleConstants.getSecondLangCodeByFirst(
                        Locale.getDefault().language)
                )
            },
            modifier = Modifier
                .height(40.dp)
                .testTag("change_email_form__apply_button"),
            enabled = isFormValid
        ) {
            if (userViewModel.changeEmailState is ApiState.Loading) {
                CircularProgressIndicator(
                    modifier = Modifier.size(20.dp)
                )
...
            onValueChange = { oldPassword = it },
            label = { Text(stringResource(R.string.settings__change_password__old_password_input)) },
            visualTransformation = PasswordVisualTransformation(),
            keyboardOptions = KeyboardOptions(keyboardType = KeyboardType.Password),
            modifier = Modifier
                .fillMaxWidth()
                .testTag("change_password_form__old_password_input")
        )

        Spacer(modifier = Modifier.height(16.dp))

        OutlinedTextField(
            value = newPassword,
            onValueChange = { newPassword = it },
            label = { Text(stringResource(R.string.settings__change_password__new_password_input)) },
            visualTransformation = PasswordVisualTransformation(),
            keyboardOptions = KeyboardOptions(keyboardType = KeyboardType.Password),
            modifier = Modifier
                .fillMaxWidth()
                .testTag("change_password_form__new_password_input")
        )

        Spacer(modifier = Modifier.height(16.dp))

        OutlinedTextField(
            value = confirmNewPassword,
            onValueChange = { confirmNewPassword = it },
            label = { Text(stringResource(R.string.settings__change_password__confirm_new_password_input)) },
            visualTransformation = PasswordVisualTransformation(),
            keyboardOptions = KeyboardOptions(keyboardType = KeyboardType.Password),
            modifier = Modifier
                .fillMaxWidth()
                .testTag("change_password_form__confirm_new_password_input")
        )

        Spacer(modifier = Modifier.height(20.dp))

        Button(
            onClick = {
...
                    oldPassword,
                    newPassword
                )
            },
            modifier = Modifier
                .height(40.dp)
                .testTag("change_password_form__apply_button"),
            enabled = isFormValid
        ) {
            if (userViewModel.changePasswordState is ApiState.Loading) {
                CircularProgressIndicator(
                    modifier = Modifier.size(20.dp)
                )
...
