...
            )
        },
        text = {
            Text(
                text = content,
                modifier = Modifier
                    .testTag("info_dialog__description")
            )
        },
        confirmButton = {
            Button(
                onClick = onConfirm,
                modifier = Modifier
                    .testTag("info_dialog__ok_button")
            ) {
                Text(stringResource(R.string.info_dialog__ok_button))
            }
        },
        modifier = Modifier
            .testTag("info_dialog"),
...
