...

    Column(
        modifier = Modifier
            .fillMaxSize()
            .padding(horizontal = 8.dp)
            .verticalScroll(rememberScrollState())
            .testTag("main_content_container"),
    ) {
        Row(
            verticalAlignment = Alignment.CenterVertically,
        ) {
            Switch(
                checked = useCurrentLocation,
                onCheckedChange = { useCurrentLocation = !useCurrentLocation },
                modifier = Modifier
                    .testTag("use_device_location_switch")
                    .semantics {
                    this.contentDescription =
                        if (useCurrentLocation) "Checked" else "Unchecked"
                }
            )
            Spacer(Modifier.width(12.dp))
...
                        includeFavorites = considerFavorites
                    )
                )
            },
            modifier = Modifier
                .fillMaxWidth()
                .testTag("generate_button")
        ) {
            Text(stringResource(R.string.generating__generate_button))
        }

        HorizontalDivider(
            thickness = 3.dp,
...
                    containerColor = MaterialTheme.colorScheme.primary,
                    contentColor = MaterialTheme.colorScheme.onPrimary
                ),
                modifier = Modifier
                    .fillMaxWidth()
                    .height(50.dp)
                    .testTag("log_in__button")
            ) {
                Text(
                    text = stringResource(R.string.generating__guest__log_in_button),
                    fontSize = 18.sp,
                    fontWeight = FontWeight.Bold
                )
...
                    containerColor = MaterialTheme.colorScheme.tertiary,
                    contentColor = MaterialTheme.colorScheme.onTertiary
                ),
                modifier = Modifier
                    .fillMaxWidth()
                    .height(50.dp)
                    .testTag("sign_up__button")
            ) {
                Text(
                    text = stringResource(R.string.generating__guest__sign_up_button),
                    fontSize = 18.sp,
                    fontWeight = FontWeight.Bold
                )
...
            Spacer(modifier = Modifier.height(16.dp))

            Button(
                onClick = onSaveClick,
                modifier = Modifier
                    .fillMaxWidth()
                    .testTag("outfit_card__save_button")
            ) {
                Text(stringResource(R.string.generating__results__outfit__save_button))
            }
        }
    }
}
...
