...
                    }
                }
            },
            modifier = Modifier
                .align(Alignment.BottomEnd)
                .padding(16.dp)
                .testTag("add_outfit_button")
        ) {
            Icon(
                imageVector = Icons.Default.Add,
                contentDescription = null
            )
        }
...
