...
                    ),
                    onClick = {
                        outfitViewModel.idOfOutfitToEdit.value = null
                        router.navigateBack()
                    },
                    modifier = Modifier
                        .testTag("cancel_button")
                ) {
                    Text(stringResource(R.string.edit_outfit__cancel_button))
                }
            }

            HorizontalDivider(
...
